# COSC-520-Assignments

./: .gitignore  README.md
Assignment-1/: README.md  pyproject.toml
Assignment-1/docs/: main.tex  sample-base.bib
Assignment-1/src/: __main__.py  data_analysis.ipynb  profile.py  profile_algorithms.py  results.csv  search_algorithms.py
Assignment-1/src/algorithms/: bin_search.py  hash_table_search.py  lin_search.py
Assignment-1/tests/: test_search_algorithms.py
Assignment-2/: LICENSE  README.md  pyproject.toml
Assignment-2/docs/: main.tex  refs.bib
Assignment-2/src/: fuzzy_search.py  generate_dataset.py  generate_graphs.ipynb  profile.py  profile_results.csv
Assignment-2/tests/: test_fuzzy_search.py
FinalProject/: README.md  pyproject.toml
FinalProject/src/: algorithms.py  analyze_benchmark.py  benchmark.py  generate_datasets.py  interactive_demo.py
FinalProject/src/datasets/: Adventures-of-Sherlock-Holmes.txt  Count-of-Monte-Cristo.txt  Dracula.txt  Gullivers-Travels.txt  Hunchback-of-Notre-Dame.txt  Moby-Dick.txt
FinalProject/tests/: test_algorithms.py
