[project]
name = "cosc-520-assignment-1"
version = "0.1.0"
description = "Assignment 1 for COSC 520"
authors = [
    {name = "Rishav Banerjee", email = "rishavbanerjee1710@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
typeguard = "^4.4.4"
tqdm = "^4.67.1"
pytest = "^8.4.2"
